--- a/exam/nodejs/package.json
+++ b/exam/nodejs/package.json
@@ -2,10 +2,10 @@
   "name": "nodejs",
   "version": "1.0.0",
   "description": "lab exam nodejs",
-  "main": "middleware.js",
+  "main": "12a.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node middleware.js"
+    "start": "node 12a.js"
   },
   "author": "Manoj Kumar M",
   "license": "ISC",
@@ -14,6 +14,6 @@
      "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
-    "mongodb": "^4.8.1"
+    "mongodb": "^2.2.34"
   }
 }
